tests/fixtures/invalid/pow_float_bool_dict.py
# Cannot call pow() with Float, Bool, Dict[str, int]
x = pow(1.0, True, {"a": 1})
